--- a/Resumen20160824.md
+++ b/Resumen20160824.md
@@ -3,5 +3,5 @@
 
 ### Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*)
 #### Variaciones estacionales en las propiedades químicas, físicas, de textura y microestructurales de los músculos aductores de la almeja del Pacífico mano de león (*Nodipecten subnodosus*)
-[Beltrán-Lugo, A., Maeda-Martínez, A., Pacheco-Aguilar, R. y Nolasco-Soria, H. 2006. Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*)
+[Beltrán-Lugo, A., Maeda-Martínez, A., Pacheco-Aguilar, R. y Nolasco-Soria, H. 2006. Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*) *Aquaculture*, 258:619-632.]
 #### Resumen por: Priscila Oviedo Velázquez
