--- a/Resumen20160824.md
+++ b/Resumen20160824.md
@@ -5,3 +5,8 @@
 #### Variaciones estacionales en las propiedades químicas, físicas, de textura y microestructurales de los músculos aductores de la almeja mano de león del Pacífico (*Nodipecten subnodosus*)
 [Beltrán-Lugo, A., Maeda-Martínez, A., Pacheco-Aguilar, R. y Nolasco-Soria, H. 2006. Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*) *Aquaculture*, 258:619-632.] (http://www.sciencedirect.com/science/article/pii/S0044848606003024)
 #### Resumen por: Priscila Oviedo Velázquez
+
+
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/art.jpg" / width = 40%>
+
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/callo.png" / width = 40%>
