--- a/Resumen20160824.md
+++ b/Resumen20160824.md
@@ -3,7 +3,7 @@
 
 ### Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*)
 #### Variaciones estacionales en las propiedades químicas, físicas, de textura y microestructurales de los músculos aductores de la almeja mano de león del Pacífico (*Nodipecten subnodosus*)
-[Beltrán-Lugo, A., Maeda-Martínez, A., Pacheco-Aguilar, R. y Nolasco-Soria, H. 2006. Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*) *Aquaculture*, 258:619-632.] (http://www.sciencedirect.com/science/article/pii/S0044848606003024)
+[Beltrán-Lugo, A., Maeda-Martínez, A., Pacheco-Aguilar, R. y Nolasco-Soria, H. 2006. Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*); *Aquaculture*, 258:619-632.] (http://www.sciencedirect.com/science/article/pii/S0044848606003024)
 #### Resumen por: Priscila Oviedo Velázquez
 
 
