--- a/Resumen20160824.md
+++ b/Resumen20160824.md
@@ -6,7 +6,10 @@
 [Beltrán-Lugo, A., Maeda-Martínez, A., Pacheco-Aguilar, R. y Nolasco-Soria, H. 2006. Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*); *Aquaculture*, 258:619-632.] (http://www.sciencedirect.com/science/article/pii/S0044848606003024)
 #### Resumen por: Priscila Oviedo Velázquez
 
+En acuicultura, la calidad de los músculos como un producto comestible ha sido olvidada, a pesar de que se ha demostrado que existen importantes variaciones en las propiedades de este organismo durante todo el año. En este trabajo, se evaluó la relación entre el estado fisiológico de la almeja mano de león con la calidad de la carne, en relación con dos variables ambientales (temperatura y concentraciones de clorofila *a*). El cultivo se realizó con semilla producida en Bahía Kino, Sonora y se sembró en Laguna Manuela, B.C. La temperatura se midió cada 30 minutos durante un año de Diciembre 2002 a Noviembre 2003, las muestras para la cuantificación de la clorofila a se tomaron cada 15 días del sitio de cultivo, asimismo se tomaron 120 almejas cada temporada para analizar el músculo aductor, índice muscular y gonadosomático, glucógeno y estadios de maduración gonadal, como indicadores del estado fisiológico de la almeja. La calidad de los músculos aductores se determinó por medio del pH, la capacidad de retención de agua, los parámetros de color, la composición proximal, contenido de aminoácidos libres, la textura y el colágeno.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/art.jpg" / width = 60%>
+
+Los resultados indican que la temperatura y concentraciones de clorofila *a* alcanzaron su punto máximo en septiembre (verano), coincidiendo con el más alto contenido de índices muscular y gonadosomático, así como glucógeno. Sin embargo el contenido de aminoácidos se vio afectado por la temporada, ya que la concentración de varios aminoácidos que dan sabor dulce a la carne fueron bajos. Con estos resultados, definir una temporada de cosecha óptima es difícil. A pesar de un peso mayor por el músculo en verano, los músculos muestran la calidad más baja. Este trabajo proporciona la base para los acuicultores para elegir la mejor temporada de cosecha para satisfacer las demandas del mercado.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/callo.png" / width = 30%>
