--- a/Resumen20160902.md
+++ b/Resumen20160902.md
@@ -1,7 +1,7 @@
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
-### Embryonic development and larval and post-larval growth of the tropical scallop *Nodipecten* (= *Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae)
-#### Desarrollo embrionario y crecimiento larval y postlarvar de la almeja tropical *Nodipecten* (= *Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae)
+### Embryonic development and larval and post-larval growth of the tropical scallop *Nodipecten* (=*Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae)
+#### Desarrollo embrionario y crecimiento larval y postlarval de la almeja tropical *Nodipecten* (= *Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae)
 [Beltrán-Lugo, A., Maeda-Martínez, A., Pacheco-Aguilar, R. y Nolasco-Soria, H. 2006. Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*); *Aquaculture*, 258:619-632.] (http://www.sciencedirect.com/science/article/pii/S0044848606003024)
 #### Resumen por: Priscila Oviedo Velázquez
