--- a/Resumen20160902.md
+++ b/Resumen20160902.md
@@ -3,5 +3,5 @@
 
 ### Embryonic development and larval and post-larval growth of the tropical scallop *Nodipecten* (=*Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae)
 #### Desarrollo embrionario y crecimiento larval y postlarval de la almeja tropical *Nodipecten* (= *Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae)
-[Beltrán-Lugo, A., Maeda-Martínez, A., Pacheco-Aguilar, R. y Nolasco-Soria, H. 2006. Seasonal variations in chemical, physical, textural, and microstructural properties of adductor muscles of Pacific lions-paw scallop (*Nodipecten subnodosus*); *Aquaculture*, 258:619-632.] (http://www.sciencedirect.com/science/article/pii/S0044848606003024)
+[De la Roche, J., Marín, B., Freites, L. y Vélez, A. 2002. Embryonic development and larval and post-larval growth of the tropical scallop *Nodipecten* (=*Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae); *Aquaculture Research*, 33: 819-827.] (http://onlinelibrary.wiley.com/doi/10.1046/j.1365-2109.2002.00692.x/abstract)
 #### Resumen por: Priscila Oviedo Velázquez
