--- a/Resumen20160902.md
+++ b/Resumen20160902.md
@@ -5,3 +5,6 @@
 #### Desarrollo embrionario y crecimiento larval y postlarval de la almeja tropical *Nodipecten* (= *Lyropecten*) *nodosus* (L. 1758) (Mollusca: Pectinidae)
 [De la Roche, J., Marín, B., Freites, L. y Vélez, A. 2002. Embryonic development and larval and post-larval growth of the tropical scallop *Nodipecten* (=*Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae); *Aquaculture Research*, 33: 819-827.] (http://onlinelibrary.wiley.com/doi/10.1046/j.1365-2109.2002.00692.x/abstract)
 #### Resumen por: Priscila Oviedo Velázquez
+
+
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Desarrollo%20larval.jpg" / width = 60%>
