--- a/Resumen20160902.md
+++ b/Resumen20160902.md
@@ -5,6 +5,7 @@
 #### Desarrollo embrionario y crecimiento larval y postlarval de la almeja tropical *Nodipecten* (= *Lyropecten*) *nodosus* (L. 1758) (Mollusca: Pectinidae)
 [De la Roche, J., Marín, B., Freites, L. y Vélez, A. 2002. Embryonic development and larval and post-larval growth of the tropical scallop *Nodipecten* (=*Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae); *Aquaculture Research*, 33: 819-827.] (http://onlinelibrary.wiley.com/doi/10.1046/j.1365-2109.2002.00692.x/abstract)
 #### Resumen por: Priscila Oviedo Velázquez
+<img src="https://www.google.com.mx/search?q=gif+almeja&espv=2&biw=1366&bih=667&tbm=isch&tbo=u&source=univ&sa=X&ved=0ahUKEwit14jZ7e7OAhVEVWMKHbxnDU4QsAQIGg#imgrc=mk8R3ZJragVy_M%3A" 
 
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Desarrollo%20larval.jpg" / width = 80%>
