--- a/Resumen20160902.md
+++ b/Resumen20160902.md
@@ -7,6 +7,8 @@
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
 
+La distribución del pectínido *Nodipecten nodosus* comprende desde Florida hasta Santa Catarina en el sur de Brasil. En algunos países del Caribe y el Atlántico es considerada una especie con gran potencial de cultivo y se han realizado estudios relacionados con aspectos de su cultivo con el propósito de su explotación comercial. En este trabajo realizaron la descripción del desarrollo embrionario y el crecimiento de las larvas y postlarvas para establecer protocolos de su reproducción controlada. Los reproductores fueron colectados de bancos naturales en Punta Arenas, Venezuela. Se acondicionaron a 28°C durante 10 días y alimentaron con *I*. *galbana* y *C*. *gracilis* para promover la maduración gonadal. La inducción al desove fue mediante shock térmico. La fertilización se realizó en una proporción ovocito esperma de 1:10.
+
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Punta%20Arenas.jpg" / width = 30%>
 
 
