--- a/Resumen20160902.md
+++ b/Resumen20160902.md
@@ -7,9 +7,13 @@
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
 
-La distribución del pectínido *Nodipecten nodosus* comprende desde Florida hasta Santa Catarina en el sur de Brasil. En algunos países del Caribe y el Atlántico es considerada una especie con gran potencial de cultivo y se han realizado estudios relacionados con aspectos de su cultivo con el propósito de su explotación comercial. En este trabajo realizaron la descripción del desarrollo embrionario y el crecimiento de las larvas y postlarvas para establecer protocolos de su reproducción controlada. Los reproductores fueron colectados de bancos naturales en Punta Arenas, Venezuela. Se acondicionaron a 28°C durante 10 días y alimentaron con *I*. *galbana* y *C*. *gracilis* para promover la maduración gonadal. La inducción al desove fue mediante shock térmico. La fertilización se realizó en una proporción ovocito esperma de 1:10.
+En algunos países del Caribe y el Atlántico *Nodipecten nodosus* es considerada una especie con gran potencial de cultivo y se han estudiado aspectos de su cultivo con el propósito de su explotación comercial. En este trabajo realizaron la descripción del desarrollo embrionario y el crecimiento de las larvas y postlarvas. Los reproductores fueron colectados de bancos naturales en Punta Arenas, Venezuela. Se acondicionaron a 28°C durante 10 días y alimentaron con *I*. *galbana* y *C*. *gracilis* para promover la maduración gonadal. La inducción al desove fue mediante shock térmico. 
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Punta%20Arenas.jpg" / width = 30%>
 
+De los 22 reproductores que se indujeron al desove, únicamente 20 respondieron al estímulo térmico (91 %), liberando entre uno y dos millones de ovocitos por individuo. La fertilización se realizó en una proporción ovocito esperma de 1:10. Las larvas fueron cultivadas a una densidad de 10, 5 y 3 larvas mL-1 a los 2, 5 y 8 días respectivamente, manteniendo una temperatura de 27°C. 
+La expulsión del primero y segundo cuerpo polar se observó a los 5 y 15 minutos después de la fertilización. A las 18 horas se observaron larvas trocófora y a las 26 horas larvas D. La larva pediveliger se observó el día 10 y la metamorfosis ocurrió entre los días 11 y 12.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Desarrollo%20larval.jpg" / width = 80%>
+
+El desarrollo de las larvas de *N. nodosus* es similar al descrito en otros pectínidos. La temperatura es un factor que regula la gametogénesis y el crecimiento gonadal, lo cual pudo observarse en el acondicionamiento de los reproductores. El asentamiento larval se logró entre el día 12,  reduciendo el tiempo comparado con otras especies de importancia comercial, lo cual sugiere un corto tiempo de cultivo en criadero, esto es importante teniendo en cuenta que el cultivo larval es una de las etapas más caras del cultivo de bivalvos. 
