--- a/Resumen20161028.md
+++ b/Resumen20161028.md
@@ -1,7 +1,7 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
 ### DNA barcoding and phylogenetic analysis of Pectinidae (Mollusca: Bivalvia) based on mitochondrial COI and 16S rRNA genes
-#### Desarrollo embrionario y crecimiento larval y postlarval de la almeja tropical *Nodipecten* (= *Lyropecten*) *nodosus* (L. 1758) (Mollusca: Pectinidae)
+#### Códigos de barras de ADN y análisis filogenético de los pectínidos (Mollusca: Bivalvia) en función de los genes mitocondriales COI y 16S rRNA 
 [De la Roche, J., Marín, B., Freites, L. y Vélez, A. 2002. Embryonic development and larval and post-larval growth of the tropical scallop *Nodipecten* (=*Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae); *Aquaculture Research*, 33: 819-827.] (http://onlinelibrary.wiley.com/doi/10.1046/j.1365-2109.2002.00692.x/abstract)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
