--- a/Resumen20161028.md
+++ b/Resumen20161028.md
@@ -5,3 +5,9 @@
 [De la Roche, J., Marín, B., Freites, L. y Vélez, A. 2002. Embryonic development and larval and post-larval growth of the tropical scallop *Nodipecten* (=*Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae); *Aquaculture Research*, 33: 819-827.] (http://onlinelibrary.wiley.com/doi/10.1046/j.1365-2109.2002.00692.x/abstract)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
+
+Recientemente, la identificación de especies que utilizan las secuencias cortas de ADN conocidos como códigos de barras de ADN se está convirtiendo cada vez más popular. Los objetivos principales del código de barras de ADN se enfocan en generar un conjunto de bibliotecas de referencia de secuencias de código de barras para las especies conocidas con el fin de desarrollar herramientas fiables y moleculares para la identificación de las especies en la naturaleza.
+
+La principal dificultad de los códigos de barras de ADN es encontrar la secuencia del gen ideal que permita la amplificación y secuenciación robusta y repetible, y que discrimine un amplio espectro de especies.
+
+En este estudio secuenciaron secuencias parciales de los genes mitocondriales COI y 16S ARNr de 63 especímenes de 8 especies de pectínidos para evaluar si los códigos de barras de ADN se pueden distinguir de manera eficiente entre estas especies.
