--- a/Resumen20161028.md
+++ b/Resumen20161028.md
@@ -2,12 +2,19 @@
 
 ### DNA barcoding and phylogenetic analysis of Pectinidae (Mollusca: Bivalvia) based on mitochondrial COI and 16S rRNA genes
 #### Códigos de barras de ADN y análisis filogenético de los pectínidos (Mollusca: Bivalvia) en función de los genes mitocondriales COI y 16S rRNA 
-[De la Roche, J., Marín, B., Freites, L. y Vélez, A. 2002. Embryonic development and larval and post-larval growth of the tropical scallop *Nodipecten* (=*Lyropecten*) *nodosus* (L. 1758) (Mollusca:Pectinidae); *Aquaculture Research*, 33: 819-827.] (http://onlinelibrary.wiley.com/doi/10.1046/j.1365-2109.2002.00692.x/abstract)
+[Feng, Y., Li, Q., Kong, L. y Zheng, X. 2011. DNA barcoding and phylogenetic analysis of Pectinidae (Mollusca: Bivalvia) based on mitochondrial COI and 16S rRNA genes; *Mol Biol Rep*, 28: 291-299.] (https://www.ncbi.nlm.nih.gov/pubmed/20336381)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
+
 
 Recientemente, la identificación de especies que utilizan las secuencias cortas de ADN conocidos como códigos de barras de ADN se está convirtiendo cada vez más popular. Los objetivos principales del código de barras de ADN se enfocan en generar un conjunto de bibliotecas de referencia de secuencias de código de barras para las especies conocidas con el fin de desarrollar herramientas fiables y moleculares para la identificación de las especies en la naturaleza.
 
 La principal dificultad de los códigos de barras de ADN es encontrar la secuencia del gen ideal que permita la amplificación y secuenciación robusta y repetible, y que discrimine un amplio espectro de especies.
 
 En este estudio secuenciaron secuencias parciales de los genes mitocondriales COI y 16S ARNr de 63 especímenes de 8 especies de pectínidos para evaluar si los códigos de barras de ADN se pueden distinguir de manera eficiente entre estas especies.
+
+Los cebadores universales COI de Folmer et al. 1994 no amplificaron en las especies recogidas en este estudio, mientras que los cebadores COI de Matsumoto (2003) y los cebadores 16S produjeron tasas de éxito de casi el 100%. Esto indica que estos cebadores universales no son aplicables a la familia Pectinidae.
+
+Las comparaciones de los niveles de divergencia de secuencias dentro y entre especies demostraron que la variación genética entre las especies es superior a la variación dentro de las especies.
+
+Las relaciones de Pectínidos que se obtuvieron en este estudio en su mayoría concuerdan con la clasificación de Waller. A fin de comprender mejor las relaciones evolutivas dentro de este grupo, es necesario una extensión de este estudio con un número adicional de especies. 
