--- a/Resumen20161028.md
+++ b/Resumen20161028.md
@@ -7,13 +7,13 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
 
 
-Recientemente, la identificación de especies que utilizan las secuencias cortas de ADN conocidos como códigos de barras de ADN se está convirtiendo cada vez más popular. Los objetivos principales del código de barras de ADN se enfocan en generar un conjunto de bibliotecas de referencia de secuencias de código de barras para las especies conocidas con el fin de desarrollar herramientas fiables y moleculares para la identificación de las especies en la naturaleza.
+Recientemente, la identificación de especies que utilizan las secuencias cortas de ADN conocidos como códigos de barras de ADN se está convirtiendo cada vez más popular. Los objetivos principales del código de barras de ADN se enfocan en generar un conjunto de bibliotecas de referencia de secuencias de código de barras para las especies conocidas con el fin de desarrollar herramientas moleculares fiables  para la identificación de las especies en la naturaleza.
 
 La principal dificultad de los códigos de barras de ADN es encontrar la secuencia del gen ideal que permita la amplificación y secuenciación robusta y repetible, y que discrimine un amplio espectro de especies.
 
 En este estudio secuenciaron secuencias parciales de los genes mitocondriales COI y 16S ARNr de 63 especímenes de 8 especies de pectínidos para evaluar si los códigos de barras de ADN se pueden distinguir de manera eficiente entre estas especies.
 
-Los cebadores universales COI de Folmer et al. 1994 no amplificaron en las especies recogidas en este estudio, mientras que los cebadores COI de Matsumoto (2003) y los cebadores 16S produjeron tasas de éxito de casi el 100%. Esto indica que estos cebadores universales no son aplicables a la familia Pectinidae.
+Los cebadores universales COI de Folmer *et al.* 1994 no amplificaron en las especies recogidas en este estudio, mientras que los cebadores COI de Matsumoto (2003) y los cebadores 16S produjeron tasas de éxito de casi el 100%. Esto indica que estos cebadores universales no son aplicables a la familia Pectinidae.
 
 Las comparaciones de los niveles de divergencia de secuencias dentro y entre especies demostraron que la variación genética entre las especies es superior a la variación dentro de las especies.
 
