--- a/Resumen20161111.md
+++ b/Resumen20161111.md
@@ -3,6 +3,6 @@
 
 ### A new electrophoresis technique to separate microsatellite alleles
 #### Una nueva técnica de electroforesis para separar alelos de microsatélites
-[Feng, Y., Li, Q., Kong, L. y Zheng, X. 2011. DNA barcoding and phylogenetic analysis of Pectinidae (Mollusca: Bivalvia) based on mitochondrial COI and 16S rRNA genes; *Mol Biol Rep*, 28: 291-299.] (https://www.ncbi.nlm.nih.gov/pubmed/20336381)
+[Wang, X., T., Rinehart, P., Wadl, J., Spiers, D., Hadziabdic, M., Windham y R., Trigiano. 2009. A new electrophoresis technique to separate microsatellite alleles; *African Journal of Biotechnology*, 8(11): 2432-2436.] (http://www.ajol.info/index.php/ajb/article/view/60628)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
