--- a/Resumen20161111.md
+++ b/Resumen20161111.md
@@ -6,3 +6,7 @@
 [Wang, X., T., Rinehart, P., Wadl, J., Spiers, D., Hadziabdic, M., Windham y R., Trigiano. 2009. A new electrophoresis technique to separate microsatellite alleles; *African Journal of Biotechnology*, 8(11): 2432-2436.] (http://www.ajol.info/index.php/ajb/article/view/60628)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
+
+<p align="justify">La electroforesis en geles de agarosa y poliacrilamida fue ampliamente utilizada en los primeros análisis de microsatélites, sin embargo el análisis de un gran número de microsatélites con estas técnicas que incluyen la preparación del gel, la tinción y fotografía puede ser un trabajo tedioso y lento, además su principal limitante es que no siempre se puede calcular con precisión el tamaño de los alelos. Por otro lado, la electroforesis capilar proporciona cálculos automatizados y precisos del tamaño de los alelos.</p> 
+
+El objetivo de este estudio fue hacer una comparación de cinco métodos para análisis de microsatélites usando geles tradicionales de agarosa y poliacrilamida y los sistemas de electroforesis capilar: QIAxcel, CEQ 8000 y El ABI 3130xl. Para comparar estos cinco sistemas de electroforesis se utilizaron microsatélites de Cornus florida.
