--- a/Resumen20161111.md
+++ b/Resumen20161111.md
@@ -10,3 +10,5 @@
 <p align="justify"> La electroforesis en geles de agarosa y poliacrilamida fue ampliamente utilizada en los primeros análisis de microsatélites, sin embargo el análisis de un gran número de microsatélites con estas técnicas que incluyen la preparación del gel, la tinción y fotografía puede ser un trabajo tedioso y lento, además su principal limitante es que no siempre se puede calcular con precisión el tamaño de los alelos. Por otro lado, la electroforesis capilar proporciona cálculos automatizados y precisos del tamaño de los alelos.</p> 
 
 <p align="justify"> El objetivo de este estudio fue hacer una comparación de cinco métodos para análisis de microsatélites usando geles tradicionales de agarosa y poliacrilamida y los sistemas de electroforesis capilar: QIAxcel, CEQ 8000 y El ABI 3130xl. Para comparar estos cinco sistemas de electroforesis se utilizaron microsatélites de *Cornus florida*. </p>:cherry_blossom: 
+
+<p align="justify"> En la figura se muestra una comparación de las imágenes de gel obtenidas de la electroforesis de agarosa y poliacrilamida y la imagen construida digitalmente del Sistema QIAxcel.</p>
