--- a/Resumen20161111.md
+++ b/Resumen20161111.md
@@ -11,7 +11,7 @@
 
 <p align="justify">El objetivo de este estudio fue hacer una comparación de cinco métodos para análisis de microsatélites usando geles tradicionales de agarosa y poliacrilamida y los sistemas de electroforesis capilar: QIAxcel, CEQ 8000 y El ABI 3130xl. Para comparar estos cinco sistemas de electroforesis se utilizaron microsatélites de *Cornus florida*.  :cherry_blossom:
 
-<p align="justify">En la figura se muestra una comparación de las imágenes de gel obtenidas de la electroforesis de agarosa y poliacrilamida y la imagen construida digitalmente del Sistema QIAxcel.
+<p align="justify">En la figura se muestra una comparación de las imágenes de gel obtenidas de la electroforesis de agarosa y poliacrilamida y la imagen construida digitalmente del sistema QIAxcel.
 
-<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Geles.jpg" / width = 50%>
+<p align="justify"> <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Geles.jpg" / width = 50%>
 
