--- a/Resumen20161111.md
+++ b/Resumen20161111.md
@@ -13,5 +13,5 @@
 
 <p align="justify">En la figura se muestra una comparación de las imágenes de gel obtenidas de la electroforesis de agarosa y poliacrilamida y la imagen construida digitalmente del sistema QIAxcel.
 
-<p align="justify"> <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Geles.jpg" / width = 50%>
+<p align="justify"> <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Geles.jpg" / width = 50%>  <p>
 
