--- a/Resumen20161111.md
+++ b/Resumen20161111.md
@@ -11,7 +11,8 @@
 
 <p align="justify">El objetivo de este estudio fue hacer una comparación de cinco métodos para análisis de microsatélites usando geles tradicionales de agarosa y poliacrilamida y los sistemas de electroforesis capilar: QIAxcel, CEQ 8000 y El ABI 3130xl. Para comparar estos cinco sistemas de electroforesis se utilizaron microsatélites de *Cornus florida*.  :cherry_blossom:
 
-<p align="justify">En la figura se muestra una comparación de las imágenes de gel obtenidas de la electroforesis de agarosa y poliacrilamida y la imagen construida digitalmente del sistema QIAxcel.
+<p align="justify">En la figura se muestra una comparación de las imágenes de gel obtenidas de la electroforesis de agarosa y poliacrilamida y la imagen construida digitalmente del sistema QIAxcel. (A) QIAxcel, (B) gel de poliacrilamida al 10% y (C) gel de agarosa al 3%.
 
-<p align="justify"> <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Geles.jpg" / width = 50%>  <p>
+ <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Geles.jpg" / width = 50%>  
 
+<p align="justify">El gel de agarosa mostro menos resolución que el gel de poliacrilamida, sin embargo, debido a la mayor sensibilidad de la tinción con plata en comparación con la fluorescencia del EtBr empleada por QIAxcel y el gel de agarosa, se detectaron algunas bandas inespecíficas en los geles de poliacrilamida.
