--- a/Resumen20161111.md
+++ b/Resumen20161111.md
@@ -11,8 +11,10 @@
 
 <p align="justify">El objetivo de este estudio fue hacer una comparación de cinco métodos para análisis de microsatélites usando geles tradicionales de agarosa y poliacrilamida y los sistemas de electroforesis capilar: QIAxcel, CEQ 8000 y El ABI 3130xl. Para comparar estos cinco sistemas de electroforesis se utilizaron microsatélites de *Cornus florida*.  :cherry_blossom:
 
-<p align="justify">En la figura se muestra una comparación de las imágenes de gel obtenidas de la electroforesis de agarosa y poliacrilamida y la imagen construida digitalmente del sistema QIAxcel. (A) QIAxcel, (B) gel de poliacrilamida al 10% y (C) gel de agarosa al 3%.
+<p align="justify">Los geles de poliacrilamida tuvieron la mayor resolución de alelos, mientras que los geles de agarosa tuvieron los valores más bajos. Sin embargo, con ambos medios de separación es difícil determinar el tamaño de los alelos. La electroforesis capilar con el Sistema de Análisis Genético CEQ 8000 y el Secuenciador de ADN ABI3130xl separa fácilmente los productos y determina el tamaño de los alelos, pero es una técnica más cara que la electroforesis en geles de agarosa o poliacrilamida. El sistema QIAxcel tuvo una resolución ligeramente más baja que los dos sistemas de electroforesis capilar, sin embargo, es más rápido y económico, ya que no requiere cebadores marcados con fluorescencia porque la detección del alelo se logra utilizando EtBr presente en la matriz de gel y puede analizar 96 muestras en menos de dos horas.
 
  <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Geles.jpg" / width = 50%>  
 
-<p align="justify">El gel de agarosa mostro menos resolución que el gel de poliacrilamida, sin embargo, debido a la mayor sensibilidad de la tinción con plata en comparación con la fluorescencia del EtBr empleada por QIAxcel y el gel de agarosa, se detectaron algunas bandas inespecíficas en los geles de poliacrilamida.
+<p align="justify">En la figura se muestra una comparación de las imágenes de gel obtenidas: (A) QIAxcel, (B) gel de poliacrilamida al 10% y (C) gel de agarosa al 3%.
+
+
