--- a/Resumen20161111.md
+++ b/Resumen20161111.md
@@ -7,11 +7,13 @@
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
 
-<p align="justify"> La electroforesis en geles de agarosa y poliacrilamida fue ampliamente utilizada en los primeros análisis de microsatélites, sin embargo el análisis de un gran número de microsatélites con estas técnicas que incluyen la preparación del gel, la tinción y fotografía puede ser un trabajo tedioso y lento, además su principal limitante es que no siempre se puede calcular con precisión el tamaño de los alelos. Por otro lado, la electroforesis capilar proporciona cálculos automatizados y precisos del tamaño de los alelos.
+<p align="justify"> La electroforesis en geles de agarosa y poliacrilamida fue ampliamente utilizada en los primeros análisis de microsatélites, sin embargo el análisis de un gran número de microsatélites puede ser un trabajo tedioso y lento, además su principal limitante es que no siempre se puede calcular con precisión el tamaño de los alelos. Por otro lado, la electroforesis capilar proporciona cálculos automatizados y precisos del tamaño de los alelos.
 
 <p align="justify">El objetivo de este estudio fue hacer una comparación de cinco métodos para análisis de microsatélites usando geles tradicionales de agarosa y poliacrilamida y los sistemas de electroforesis capilar: QIAxcel, CEQ 8000 y El ABI 3130xl. Para comparar estos cinco sistemas de electroforesis se utilizaron microsatélites de *Cornus florida*.  :cherry_blossom:
 
 <p align="justify">Los geles de poliacrilamida tuvieron la mayor resolución de alelos, mientras que los geles de agarosa tuvieron los valores más bajos. Sin embargo, con ambos medios de separación es difícil determinar el tamaño de los alelos. La electroforesis capilar con el Sistema de Análisis Genético CEQ 8000 y el Secuenciador de ADN ABI3130xl separa fácilmente los productos y determina el tamaño de los alelos, pero es una técnica más cara que la electroforesis en geles de agarosa o poliacrilamida. El sistema QIAxcel tuvo una resolución ligeramente más baja que los dos sistemas de electroforesis capilar, sin embargo, es más rápido y económico, ya que no requiere cebadores marcados con fluorescencia porque la detección del alelo se logra utilizando EtBr presente en la matriz de gel y puede analizar 96 muestras en menos de dos horas.
+
+<p align="justify">El ahorro de costos en reactivos y tiempo, hacen que el uso del sistema QIAxcel sea un método rápido, rentable y preciso para realizar pruebas de microsatélites a gran escala. 
 
  <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Geles.jpg" / width = 50%>  
 
