--- a/Resumen20161118.md
+++ b/Resumen20161118.md
@@ -2,7 +2,7 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
 ### Population genetic structure of the Korean Pacific abalone *Haliotis diversicolor supertaxa* inferred from microsatellite marker analysis
-#### Estructura genética de la población de abulón de Corea *Haliotis diversicolor supertaxa* deducida del análisis de marcadores microsatélites
+#### Estructura genética de la población del abulón de Corea *Haliotis diversicolor supertaxa* deducida del análisis de marcadores microsatélites
 [Wang, X., T., Rinehart, P., Wadl, J., Spiers, D., Hadziabdic, M., Windham y R., Trigiano. 2009. A new electrophoresis technique to separate microsatellite alleles; *African Journal of Biotechnology*, 8(11): 2432-2436.] (http://www.ajol.info/index.php/ajb/article/view/60628)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
