--- a/Resumen20161118.md
+++ b/Resumen20161118.md
@@ -3,6 +3,6 @@
 
 ### Population genetic structure of the Korean Pacific abalone *Haliotis diversicolor supertaxa* inferred from microsatellite marker analysis
 #### <p align="justify">Estructura genética de la población del abulón de Corea *Haliotis diversicolor supertaxa* deducida del análisis de marcadores microsatélites
-[Wang, X., T., Rinehart, P., Wadl, J., Spiers, D., Hadziabdic, M., Windham y R., Trigiano. 2009. A new electrophoresis technique to separate microsatellite alleles; *African Journal of Biotechnology*, 8(11): 2432-2436.] (http://www.sciencedirect.com/science/article/pii/S0305197812002499)
+[An, H., J., Lee y S., Hong. 2013. Population genetic structure of the Korean Pacific abalone *Haliotis diversicolor supertaxa* inferred from microsatellite marker analysis; *Biochemical Systematics and Ecology*, 48: 76-84.] (http://www.sciencedirect.com/science/article/pii/S0305197812002499)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
