--- a/Resumen20161118.md
+++ b/Resumen20161118.md
@@ -1,8 +1,8 @@
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
-### Population genetic structure of the Korean Pacific abalone *Haliotis diversicolor supertaxa* inferred from microsatellite marker analysis
-#### <p align="justify">Estructura genética de la población del abulón de Corea *Haliotis diversicolor supertaxa* deducida del análisis de marcadores microsatélites
-[An, H., J., Lee y S., Hong. 2013. Population genetic structure of the Korean Pacific abalone *Haliotis diversicolor supertaxa* inferred from microsatellite marker analysis; *Biochemical Systematics and Ecology*, 48: 76-84.] (http://www.sciencedirect.com/science/article/pii/S0305197812002499)
+### Population genetic structure of the Korean Pacific abalone *Haliotis diversicolor supertexta* inferred from microsatellite marker analysis
+#### <p align="justify">Estructura genética de la población del abulón de Corea *Haliotis diversicolor supertexta* deducida del análisis de marcadores microsatélites
+[An, H., J., Lee y S., Hong. 2013. Population genetic structure of the Korean Pacific abalone *Haliotis diversicolor supertexta* inferred from microsatellite marker analysis; *Biochemical Systematics and Ecology*, 48: 76-84.] (http://www.sciencedirect.com/science/article/pii/S0305197812002499)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
