--- a/Resumen20161118.md
+++ b/Resumen20161118.md
@@ -6,3 +6,13 @@
 [An, H., J., Lee y S., Hong. 2013. Population genetic structure of the Korean Pacific abalone *Haliotis diversicolor supertexta* inferred from microsatellite marker analysis; *Biochemical Systematics and Ecology*, 48: 76-84.] (http://www.sciencedirect.com/science/article/pii/S0305197812002499)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
+
+<p align="justify">El abulón del Pacífico Haliotis diversicolor supertaxa es una de las especies de moluscos más importantes en el este de Asia. En Corea, es capturado intensamente en la isla de Jeju. Sin embargo, la captura anual de este abulón ha disminuido drásticamente desde 1997 y alcanzó un mínimo histórico de aproximadamente 12 toneladas en 2006, lo que representa una disminución del 90 % y además no existen informes disponibles sobre el estado de la diversidad genética actual de H. diversicolor supertexta.
+
+<p align="justify">Para investigar sus características genéticas con fines de conservación y manejo, se analizó la variación genética en cuatro poblaciones de la isla de Jeju, Corea, utilizando 20 loci de microsatélites. Las localidades muestreadas fueron: Donggwi (n=60), Woodo (n=50), Pyoson (n=91) y Taeheung (n=50).
+
+ <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/5018000078c.jpg" / width = 50%> 
+
+<p align="justify">El número promedio de alelos por locus varió de 6.5 a 25.5, y el número promedio de alelos por población varió de 12.92 a 14.92. No se encontraron diferencias significativas en la variación genética entre las muestras de cada localidad, excepto por la población de Pyoson, que exhibió una diferencia muy significativa en la riqueza alélica. Las diferencias en la variación genética entre las poblaciones podrían atribuirse a una reducción del tamaño de la población debido a la extracción. La alta presión de la pesca podría reducir drásticamente el tamaño de la población y llevar a una disminución de la riqueza alélica debido a la pérdida aleatoria de los alelos de baja frecuencia. 
+
+<p align="justify">Este estudio proporciona información importante para apoyar estrategias de conservación para esta especie, la población de abulón de Pyoson debería tener una mayor prioridad de conservación debido a sus características genéticas únicas.
