--- a/Resumen20161118.md
+++ b/Resumen20161118.md
@@ -7,7 +7,7 @@
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
 
-<p align="justify">El abulón del Pacífico *Haliotis diversicolor supertaxa* es una de las especies de moluscos más importantes en el este de Asia. En Corea, es capturado intensamente en la isla de Jeju. Sin embargo, la captura anual de este abulón ha disminuido drásticamente desde 1997 y alcanzó un mínimo histórico de aproximadamente 12 toneladas en 2006, lo que representa una disminución del 90 % y además no existen informes disponibles sobre el estado de la diversidad genética actual de *H. diversicolor supertexta*.
+<p align="justify">El abulón del Pacífico *Haliotis diversicolor supertexta* es una de las especies de moluscos más importantes en el este de Asia. En Corea, es capturado intensamente en la isla de Jeju. Sin embargo, la captura anual de este abulón ha disminuido drásticamente desde 1997 y alcanzó un mínimo histórico de aproximadamente 12 toneladas en 2006, lo que representa una disminución del 90 % y además no existen informes disponibles sobre el estado de la diversidad genética actual de *H. diversicolor supertexta*.
 
 <p align="justify">Para investigar sus características genéticas con fines de conservación y manejo, se analizó la variación genética en cuatro poblaciones de la isla de Jeju, Corea, utilizando 20 loci de microsatélites. Las localidades muestreadas fueron: Donggwi (n=60), Woodo (n=50), Pyoson (n=91) y Taeheung (n=50).
 
