--- a/Resumen20161125.md
+++ b/Resumen20161125.md
@@ -6,3 +6,15 @@
 [Cerón-Ortíz, A. N., B. Cordero, B. O. Arredondo-Vega y D. Voltolina. 2009. Effect of algal diet and temperature on survival, growth and biochemical composition of spat of the lion's paw scallop *Nodipecten subnodosus*; *Aquaculture*, 298: 64-69.] (http://www.sciencedirect.com/science/article/pii/S0044848609008333)
 #### Resumen por: Priscila Oviedo Velázquez
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Imagen-animada-Almeja-04.gif" / width = 10%>
+
+<p align="justify">La almeja mano de león del Pacífico es de particular interés para la acuicultura mexicana, ya que en solamente 1 año puede crecer hasta más de 10 cm de altura de la concha y su músculo aductor puede alcanzar los 50 g. Sin embargo, la disponibilidad de semillas de buena calidad es limitada, lo cual se debe en parte al escaso conocimiento de los requerimientos de sus etapas juveniles. 
+
+<p align="justify">El objetivo de este estudio fue evaluar la supervivencia y crecimiento de semillas de Nodipecten subnodosus cultivadas a tres temperaturas y alimentadas con tres mezclas de  microalgas ricas en ácidos grasos.
+
+<p align="justify">Las semillas de aproximadamente 3 mm de longitud se mantuvieron durante 10 semanas a temperaturas de 23, 26 y 29 °C, y se alimentaron con mezclas 2:1 (célula: célula) de Chaetoceros calcitrans con Pavlova lutheri (Dieta M1); Chaetoceros calcitrans con Isochrysis sp. (Dieta M2) o con una mezcla 1:1 de P. lutheri e Isochrysis sp. (Dieta M3).
+
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/semillas.jpg" / width = 50%> 
+
+<p align="justify">La mortalidad fue de 100% después de 4 semanas a 29 °C. La supervivencia fue mayor con la dieta M1 que con las otras dietas (51% a 23 °C y 46% a 26 °C). El mejor crecimiento en la altura de la concha fue con la dieta M2, pero no hubo diferencias en el peso orgánico final entre las dietas M1 y M2; La dieta M3 mostró el menor crecimiento de las semillas.
+
+<p align="justify">Como en el caso de otras larvas y semillas de bivalvos, las dietas mixtas suelen dar un mejor crecimiento a los pectínidos que las dietas monoespecíficas. Estos resultados sugieren que las semillas de N. subnodosus deben mantenerse a 26 °C y alimentarse con una dieta mixta que contenga C. calcitrans y P. lutheri o Isochrysis sp.
