--- a/Resumen20161125.md
+++ b/Resumen20161125.md
@@ -15,6 +15,6 @@
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/semillas.jpg" / width = 50%> 
 
-<p align="justify">La mortalidad fue de 100% después de 4 semanas a 29 °C. La supervivencia fue mayor con la dieta M1 que con las otras dietas (51% a 23 °C y 46% a 26 °C). El mejor crecimiento en la altura de la concha fue con la dieta M2, pero no hubo diferencias en el peso orgánico final entre las dietas M1 y M2; La dieta M3 mostró el menor crecimiento de las semillas.
+<p align="justify">La mortalidad fue de 100% después de 4 semanas a 29 °C. La supervivencia fue mayor con la dieta M1 que con las otras dietas (51% a 23 °C y 46% a 26 °C). El mejor crecimiento en la altura de la concha fue con la dieta M2, pero no hubo diferencias en el peso orgánico final entre las dietas M1 y M2; la dieta M3 mostró el menor crecimiento de las semillas.
 
-<p align="justify">Como en el caso de otras larvas y semillas de bivalvos, las dietas mixtas suelen dar un mejor crecimiento a los pectínidos que las dietas monoespecíficas. Estos resultados sugieren que las semillas de N. subnodosus deben mantenerse a 26 °C y alimentarse con una dieta mixta que contenga *C. calcitrans* y *P. lutheri* o *Isochrysis* sp.
+<p align="justify">Como en el caso de otras larvas y semillas de bivalvos, las dietas mixtas suelen dar un mejor crecimiento a los pectínidos que las dietas monoespecíficas. Estos resultados sugieren que las semillas de *N. subnodosus* deben mantenerse a 26 °C y alimentarse con una dieta mixta que contenga *C. calcitrans* y *P. lutheri* o *Isochrysis* sp.
